fix: Change contrast ratio to have white text on orange bg

--- a/scss/variables/_colors.scss
+++ b/scss/variables/_colors.scss
@@ -1,5 +1,9 @@
 //Override Bootstrap default colors
 
+// The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
+// See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
+$min-contrast-ratio:   2.5 !default;
+
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
